developer/src/kmc-kmn/test/fixtures/invalid-keyboards/error_virtual_key_expansion_too_long.kmn
store(&NAME) 'error_virtual_key_expansion_too_long'
store(&VERSION) '9.0'

begin unicode > use(main)

group(main) using keys

c maximum store length is 4096 UTF-16 code units, including U+0000 terminator
c #define GLOBAL_BUFSIZE  4096   // compfile.h
c so we need 0x101D - 0x0020 + 1 = 0x0FFE --> 4094 words
c each VK is 5 words long UC_SENTINEL CODE_EXTENDED shift key CODE_EXTENDEDEND (some long history here!)
c we start filling the buffer with 4064 words (0x0FFF - 0x0020 + 1) and then the remaining 30 bytes = 6 VKs A-F

store(x)    U+0020 .. U+0FFF [K_A] .. [K_F]

any(x) + 'x' > 'x' context
